# proposal

./: 01_introduction.rst  02_proposal.rst  A-misc.rst  CNAME  README.md  background.rst  conf.py  index.html  index.rst  introduction.rst  mkdocs.yml  proposal.rst  pyproject.toml  references.bib  requirements.txt  settings.toml  sitemap.xml  zreferences.rst
.github/workflows/: main.yml
docs/: index.md  motivation.md
docs/transportation/freight/: primer.md
docs/transportation/mobility/: 0-index.md  1-non-metropolitan-mobility.md  2-regional-transportation-plans.md  3-potential-datasources.md
figures/: TTU-DRPT-Thesis.drawio
motivation/: index.html
themes/gitbook/: nav.html
transportation/freight/primer/: index.html
transportation/mobility/0-index/: index.html
transportation/mobility/1-non-metropolitan-mobility/: index.html
transportation/mobility/2-regional-transportation-plans/: index.html
transportation/mobility/3-potential-datasources/: index.html
